package process_rpc_proto;

// TODO 传递数据的 proto

// Sample message.
message AppStarted {
    required string  appid = 1;
    optional string  http_port = 2;
    required uint32 pid=3;
}


message FuncCallReq{
    required string func=1;
    required string arg_str=2;
}

message FuncCallResp{
    required string ret_str=1;
}

message UpdateCheckpoint{
    
}

message KeyRange {
    required bytes start=1;
    required bytes end=2;
}
  
message KvPair {
    required bytes key=1;
    required bytes value=2;
}

message KvRequest {
    message KvPutRequest{
        required KvPair kv=1;
    }
    message KvGetRequest{
        required KeyRange range=1;
    }

    message KvDeleteRequest{
        required KeyRange range=1;
    }

    message KvLockRequest{
        required bool read_or_write=1;
        repeated uint32 release_id=2;
        required KeyRange range=3;
    }
    oneof op {
        KvPutRequest set=1;
        KvGetRequest get=2;
        KvDeleteRequest delete=3;
        KvLockRequest lock=4;
    }
}

message KvPairs{
    repeated KvPair kvs=1;
}

message KvResponse {
    message CommonKvResponse {
        repeated KvPair kvs=1;
    }
    oneof resp {
        CommonKvResponse common_resp=1;
        uint32 lock_id=2;
    }
}

message KvResponses{
    repeated KvResponse responses=1;
}

message KvRequests{
    required string app=1;
    required string func=2;
    repeated KvRequest requests=3;
    required int64 prev_kv_opeid=4;
}